# geo-hack

./: .gitignore  main.py  pyproject.toml
pages/: 1_Import.py  2_ICP_Profiles.py  3_Recommendations.py
