[project]
name = "geo-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "openai>=1.58.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]
